--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import "/headdiv.css" ;
-@import"/enjoytv.css";
-@import"/downloadwatch.css";
-@import"/watchevery.css";
-@import"/frequently.css";
+@import "headdiv.css" ;
+@import"enjoytv.css";
+@import"downloadwatch.css";
+@import"watchevery.css";
+@import"frequently.css";
 .main-body{
     background-color:#222;
     background-repeat: no-repeat;
